testsuite/gnatprove/tests/T623-013__output_checks/test.out
default command-line output
---------------------------

incr.adb:3:11: medium: overflow check might fail
  e.g. when X = Integer'Last
  reason for check: result of addition must fit in a 32-bits machine integer
  possible fix: subprogram at line 1 should mention X in a precondition

brief output
------------
incr.adb:3:11: medium: overflow check might fail

pretty output
-------------

incr.adb:3:11: medium: overflow check might fail
  e.g. when X = Integer'Last
  reason for check: result of addition must fit in a 32-bits machine integer
  possible fix: subprogram at line 1 should mention X in a precondition

one-line output
---------------
incr.adb:3:11: medium: overflow check might fail (e.g. when X = Integer'Last) [reason for check: result of addition must fit in a 32-bits machine integer] [possible fix: subprogram at line 1 should mention X in a precondition]

incorrect output value
----------------------
error: wrong argument for --output
Try "gnatprove --help" for more information.
